# ChangeLog for net-wireless/ap-utils
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/ap-utils/ChangeLog,v 1.5 2003/02/18 13:38:02 latexer Exp $

  31 Oct 2002; Hannes Mehnert <hannes@gentoo.org>:
  moved to net-wireless

*ap-utils-1.3.1 (18 Feb 2003)

  18 Feb 2003; Peter Johanson <latexer@gentoo.org> ap-utils-1.3.1.ebuild files/digest-ap-utils-1.3.1 :
  Version bump. Thanks to Joseph Carter <knghtbrd@@efn.org> for the ebuild

*ap-utils-1.0.5 (15 Sep 2002)

  03 Nov 2002; Kain <kain@kain.org>:
  current ap-utils does NOT work correctly on PPC. (endianess issues)

  15 Sep 2002; Aron Griffis <agriffis@gentoo.org> ap-utils-1.0.5.ebuild:
  Initial ebuild.