@@ -1,0 +1,23 @@
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ap-utils/Attic/ap-utils-1.3.3.ebuild,v 1.1 2003/12/18 22:30:46 latexer Exp $
+
+IUSE="nls"
+
+DESCRIPTION="Wireless Access Point Utilites for Unix"
+HOMEPAGE="http://ap-utils.polesye.net/"
+SRC_URI="mirror://sourceforge/ap-utils/${P}.tar.bz2"
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86"
+DEPEND=">=bison-1.34"
+RDEPEND=""
+
+src_compile() {
+	econf --build=${CHOST} `use_enable nls` || die
+	emake || die
+}
+
+src_install () {
+	einstall || die
+}
