@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/ap-utils
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ap-utils/ChangeLog,v 1.5 2003/02/18 13:38:02 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ap-utils/ChangeLog,v 1.6 2003/12/18 22:30:46 latexer Exp $
+
+*ap-utils-1.3.3 (18 Dec 2003)
+
+  18 Dec 2003; Peter Johanson <latexer@gentoo.org> ap-utils-1.3.3.ebuild,
+  metadata.xml:
+  Version bumped, and added metadata.xml
 
   31 Oct 2002; Hannes Mehnert <hannes@gentoo.org>:
   moved to net-wireless
